Modify DNS and proxy settings in 策略组.conf
Updated DNS settings and proxy rules in the configuration file.

--- a/策略组.conf
+++ b/策略组.conf
@@ -1,52 +1,45 @@
-# Shadowrocket: 2026-01-14 15:11:05
+# Shadowrocket: 2026-01-14 15:48:55
 [General]
 bypass-system = true
-skip-proxy = 127.0.0.1,192.168.0.0/16,10.0.0.0/8,172.16.0.0/12
-# 强制 DoH 解析通过节点
+skip-proxy = 127.0.0.1,192.168.0.0/16,10.0.0.0/8,172.16.0.0/12,captive.apple.com
+dns-server = 1.1.1.1,8.8.8.8
+private-ip-answer = true
+ipv6 = true
+
+# 强制 DNS 走代理
 doh-server = https://1.1.1.1/dns-query,https://8.8.8.8/dns-query
-fallback-dns-server = 127.0.0.1
+fallback-dns-server = 1.1.1.1,8.8.8.8
 prefer-doh = true
 dns-fallback-system = false
-force-dns-over-proxy = true   # ✅ 核心：所有 DNS 请求都走代理
-update-url = https://raw.githubusercontent.com/0596cyy-cyber/Shadowrocket/refs/heads/main/%E7%AD%96%E7%95%A5%E7%BB%84.conf
+force-dns-over-proxy = true
+
+[Proxy]
+rename = true
+rename-rule = 🇯🇵 日本节点,Japan|Tokyo|JP
+rename-rule = 🇭🇰 香港节点,Hong|HK
+rename-rule = 🇨🇳 台湾节点,TW|Taiwan
+rename-rule = 🇸🇬 新加坡,Singapore|SG
+rename-rule = 🇺🇸 美国节点,US|American
+rename-rule = 🇬🇧 英国节点,UK|Britain
 
 [Proxy Group]
 🚀 节点选择 = select, 🔯 自动选择, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇯🇵 日本节点, 🇸🇬 新加坡, 🇺🇸 美国节点, 🇬🇧 英国节点
 🔯 自动选择 = url-test, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇯🇵 日本节点, 🇸🇬 新加坡, 🇺🇸 美国节点, url=http://www.gstatic.com/generate_204,interval=300,tolerance=100
-🌐 国外服务 = select, 🚀 节点选择, 🔯 自动选择, 🇭🇰 香港节点, 🇯🇵 日本节点, 🇸🇬 新加坡, 🇺🇸 美国节点, 🇬🇧 英国节点
+🌐 国外服务 = select, 🚀 节点选择, 🔯 自动选择, 🇯🇵 日本节点, 🇸🇬 新加坡, 🇺🇸 美国节点, 🇬🇧 英国节点
 🌏 国内服务 = select, DIRECT
+🤖 AI 服务 = select, 🇸🇬 新加坡，🇺🇸美国, 🇯🇵日本
 📱 社交平台 = select, 🌐 国外服务, 🚀 节点选择, DIRECT
 🎮 游戏平台 = select, 🌐 国外服务, 🚀 节点选择
-🎬 流媒体 = select, 🌐 国外服务, 🇸🇬 新加坡, 🇯🇵 日本节点, 🇺🇸 美国节点, 🇬🇧 英国节点
+🎬 流媒体 = select, 🇨🇳 台湾, 🇸🇬 新加坡, 🇯🇵 日本节点, 🇺🇸 美国节点, 🇬🇧 英国节点
 📺 国内流媒体 = select, 🌏 国内服务, DIRECT
-💻 开发平台 = select, 🌐 国外服务, 🇨🇳 台湾, 🇯🇵 日本, 🇸🇬 新加坡
+💻 开发平台 = select, 🇯🇵 日本节点, 🇨🇳 台湾节点, 🇸🇬 新加坡
 🍎 苹果服务 = select, 🌏 国内服务, DIRECT
 📰 新闻阅读 = select, 🌐 国外服务, 🚀 节点选择
 🛑 广告拦截 = select, REJECT
+🌐 Google Translate = select, 🇺🇸 美国节点
 
 [Rule]
-DOMAIN-KEYWORD,hongxingyun.club,DIRECT
-DOMAIN-KEYWORD,douyinvod.com,DIRECT
-
-# 广告拦截
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Advertising/Advertising.list,🛑 广告拦截
-DOMAIN-SUFFIX,umeng.com,REJECT
-DOMAIN-SUFFIX,umengcloud.com,REJECT
-DOMAIN-KEYWORD,umeng,REJECT
-DOMAIN-SUFFIX,talkingdata.net,REJECT
-DOMAIN-KEYWORD,talkingdata,REJECT
-DOMAIN-SUFFIX,hm.baidu.com,REJECT
-DOMAIN-SUFFIX,baidustatic.com,REJECT
-DOMAIN-KEYWORD,baiduads,REJECT
-DOMAIN-SUFFIX,mmstat.com,REJECT
-DOMAIN-SUFFIX,adashx.ut.taobao.com,REJECT
-DOMAIN-SUFFIX,pangolin-sdk-toutiao.com,REJECT
-DOMAIN-SUFFIX,bytedance.com,REJECT
-DOMAIN-SUFFIX,bytedance.net,REJECT
-DOMAIN-SUFFIX,byteoversea.com,REJECT
-DOMAIN-KEYWORD,ad.byted,REJECT
-
-# 国内流媒体
 DOMAIN-SUFFIX,iqiyi.com,📺 国内流媒体
 DOMAIN-SUFFIX,letv.com,📺 国内流媒体
 DOMAIN-SUFFIX,sohu.com,📺 国内流媒体
@@ -56,23 +49,17 @@ DOMAIN-SUFFIX,mgtv.com,📺 国内流媒体
 DOMAIN-SUFFIX,acfun.cn,📺 国内流媒体
 DOMAIN-SUFFIX,fun.tv,📺 国内流媒体
 DOMAIN-SUFFIX,baofeng.com,📺 国内流媒体
-
-# 苹果服务
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Apple/Apple.list,🍎 苹果服务
-
-# 国内服务
+DOMAIN-SUFFIX,push.apple.com,DIRECT
+DOMAIN-SUFFIX,pulse.apple.com,DIRECT
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/China/China.list,🌏 国内服务
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/ChinaIPs/ChinaIPs.list,🌏 国内服务
 GEOIP,CN,🌏 国内服务
-
-# 抖音国内直连
 DOMAIN-SUFFIX,douyin.com,DIRECT
 DOMAIN-SUFFIX,iesdouyin.com,DIRECT
 DOMAIN-SUFFIX,snssdk.com,DIRECT
 DOMAIN-SUFFIX,amemv.com,DIRECT
 DOMAIN-SUFFIX,muscdn.com,DIRECT
-
-# 国外流媒体
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Netflix/Netflix.list,🎬 流媒体
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Disney/Disney.list,🎬 流媒体
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/YouTube/YouTube.list,🎬 流媒体
@@ -83,30 +70,18 @@ RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/r
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Spotify/Spotify.list,🎬 流媒体
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Emby/Emby.list,🎬 流媒体
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Pandora/Pandora.list,🎬 流媒体
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/TikTok/TikTok.list,🇯🇵 日本节点
-
-# 社交平台
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/TikTok/TikTok.list,🤖 AI 服务
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Telegram/Telegram.list,📱 社交平台
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Twitter/Twitter.list,📱 社交平台
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Facebook/Facebook.list,📱 社交平台
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Instagram/Instagram.list,📱 社交平台
-
-# 游戏平台
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Game/Game.list,🎮 游戏平台
-
-# 开发平台（含 OpenAI）
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Gemini/Gemini.list,💻 开发平台
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Gemini/Gemini.list,🇺🇸 美国中转
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/GitHub/GitHub.list,💻 开发平台
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Google/Google.list,💻 开发平台
-DOMAIN-KEYWORD,openai.com,🇺🇸 美国中转原生
-DOMAIN-KEYWORD,chatgpt.com,🇺🇸 美国中转原生
-
-# 其他国外服务
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Google/Google.list,🤖 AI 服务
+DOMAIN-KEYWORD,openai.com,🤖 AI 服务,pre-matching,extended-matching
+DOMAIN-KEYWORD,chatgpt.com,🤖 AI 服务
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Proxy/Proxy.list,🌐 国外服务
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Global/Global.list,🌐 国外服务
-
-# 局域网
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Lan/Lan.list,DIRECT
-
-# 兜底
 FINAL,🌐 国外服务
