--- a/策略组.conf
+++ b/策略组.conf
@@ -1,4 +1,4 @@
-# Shadowrocket: 2025-10-01 17:34:48
+# Shadowrocket: 2026-01-14 19:59:22
 [General]
 bypass-system = true
 skip-proxy = 127.0.0.1,192.168.0.0/16,10.0.0.0/8,172.16.0.0/12
@@ -11,13 +11,13 @@ force-dns-over-proxy = true   # ✅ 核心：所有 DNS 请求都走代理
 update-url = https://raw.githubusercontent.com/0596cyy-cyber/Shadowrocket/refs/heads/main/%E7%AD%96%E7%95%A5%E7%BB%84.conf
 
 [Proxy Group]
-🚀 节点选择 = select, 🔯 自动选择, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇯🇵 日本节点, 🇸🇬 新加坡, 🇺🇸 美国节点, 🇬🇧 英国节点
-🔯 自动选择 = url-test, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇯🇵 日本节点, 🇸🇬 新加坡, 🇺🇸 美国节点, url=http://www.gstatic.com/generate_204,interval=300,tolerance=100
-🌐 国外服务 = select, 🚀 节点选择, 🔯 自动选择, 🇭🇰 香港节点, 🇯🇵 日本节点, 🇸🇬 新加坡, 🇺🇸 美国节点, 🇬🇧 英国节点
+🚀 节点选择 = select, 🔯 自动选择, 🇭🇰 香港, 🇨🇳 台湾, 🇯🇵 日本, 🇸🇬 新加坡, 🇺🇸 美国, 🇬🇧 英国
+🔯 自动选择 = url-test, 🇭🇰 香港, 🇨🇳 台湾, 🇯🇵 日本, 🇸🇬 新加坡, 🇺🇸 美国, url=http://www.gstatic.com/generate_204,interval=300,tolerance=100
+🌐 国外服务 = select, 🚀 节点选择, 🔯 自动选择, 🇭🇰 香港, 🇯🇵 日本, 🇸🇬 新加坡, 🇺🇸 美国, 🇬🇧 英国
 🌏 国内服务 = select, DIRECT
 📱 社交平台 = select, 🌐 国外服务, 🚀 节点选择, DIRECT
 🎮 游戏平台 = select, 🌐 国外服务, 🚀 节点选择
-🎬 流媒体 = select, 🌐 国外服务, 🇸🇬 新加坡, 🇯🇵 日本节点, 🇺🇸 美国节点, 🇬🇧 英国节点
+🎬 流媒体 = select, 🌐 国外服务, 🇸🇬 新加坡, 🇯🇵 日本, 🇺🇸 美国, 🇬🇧 英国
 📺 国内流媒体 = select, 🌏 国内服务, DIRECT
 💻 开发平台 = select, 🌐 国外服务, 🇨🇳 台湾, 🇯🇵 日本, 🇸🇬 新加坡
 🍎 苹果服务 = select, 🌏 国内服务, DIRECT
@@ -83,7 +83,7 @@ RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/r
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Spotify/Spotify.list,🎬 流媒体
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Emby/Emby.list,🎬 流媒体
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Pandora/Pandora.list,🎬 流媒体
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/TikTok/TikTok.list,🇯🇵 日本节点
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/TikTok/TikTok.list,🇯🇵 日本
 
 # 社交平台
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Telegram/Telegram.list,📱 社交平台
@@ -98,8 +98,8 @@ RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/r
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Gemini/Gemini.list,💻 开发平台
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/GitHub/GitHub.list,💻 开发平台
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Google/Google.list,💻 开发平台
-DOMAIN-KEYWORD,openai.com,🇺🇸 美国中转原生
-DOMAIN-KEYWORD,chatgpt.com,🇺🇸 美国中转原生
+DOMAIN-KEYWORD,openai.com,🇺🇸 美国中转
+DOMAIN-KEYWORD,chatgpt.com,🇺🇸 美国中转
 
 # 其他国外服务
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Proxy/Proxy.list,🌐 国外服务
