Modify DNS and proxy settings in 策略组.conf
Updated DNS settings and proxy configurations for improved privacy and functionality.

--- a/策略组.conf
+++ b/策略组.conf
@@ -1,55 +1,64 @@
-# Shadowrocket: 2026-01-16 09:09:58
 [General]
-ipv6 = true
+ipv6 = false
 bypass-system = true
-skip-proxy = 127.0.0.1,192.168.0.0/16,10.0.0.0/8,172.16.0.0/12
-# 强制 DoH (高隐私)
-dns-server = https://doh.pub/dns-query,https://dns.alidns.com/dns-query,223.5.5.5,119.29.29.29
-fallback-dns-server = 127.0.0.1
+skip-proxy = 127.0.0.1,192.168.0.0/16,10.0.0.0/8,172.16.0.0/12,100.64.0.0/10,17.0.0.0/8
+# --- DNS 修正：防泄漏设置 ---
+# 使用国际 DNS 确保隐私，国内域名会通过 Rule 规则里的 Direct 直连，不会影响国内速度
+doh-server = https://1.1.1.1/dns-query,https://8.8.8.8/dns-query
+# 备用 DNS (仅在 DoH 失败时使用)
+fallback-dns-server = 1.1.1.1,8.8.8.8
 prefer-doh = true
 dns-fallback-system = false
 force-dns-over-proxy = false
-# 当节点不支持 UDP 时拒绝连接，防止卡死
 udp-policy-not-supported-behaviour = REJECT
 update-url = https://raw.githubusercontent.com/0596cyy-cyber/Shadowrocket/refs/heads/main/%E7%AD%96%E7%95%A5%E7%BB%84.conf
 
 [Proxy Group]
-# 主要策略
+# --- 核心策略 ---
 🚀 节点选择 = select, 🔯 自动选择, 🇭🇰 香港, 🇨🇳 台湾, 🇯🇵 日本, 🇸🇬 新加坡, 🇺🇸 美国, 🇬🇧 英国
-🔯 自动选择 = url-test, 🇭🇰 香港, 🇨🇳 台湾, 🇯🇵 日本, 🇸🇬 新加坡, 🇺🇸 美国, url=http://www.gstatic.com/generate_204,interval=300,tolerance=100
+🔯 自动选择 = url-test, policy-regex-filter=(?i)(HK|Hong|TW|Tai|JP|Japan|US|State|SG|Sing|KR|Korea|UK|Kingdom), url=http://www.gstatic.com/generate_204, interval=300, tolerance=50
 
-# 场景策略
-🌐 国外服务 = select, 🚀 节点选择, 🔯 自动选择, 🇭🇰 香港, 🇯🇵 日本, 🇸🇬 新加坡, 🇺🇸 美国, 🇬🇧 英国
+# --- 场景策略 ---
+# OpenAI/ChatGPT 专用 (强制美国)
+💻 开发平台 = select, policy-regex-filter=(?i)(美国|US|United States|Relay)
+
+# 流媒体 (默认跟随节点选择，也可手动指定)
+🎬 流媒体 = select, 🚀 节点选择, 🇭🇰 香港, 🇸🇬 新加坡, 🇯🇵 日本, 🇺🇸 美国, 🇬🇧 英国
+📺 国内流媒体 = select, DIRECT
+
+# 社交与游戏
+📱 社交平台 = select, 🚀 节点选择, 🇭🇰 香港, 🇯🇵 日本, 🇺🇸 美国
+🎮 游戏平台 = select, 🚀 节点选择, 🇯🇵 日本, 🇺🇸 美国
+
+# 其他
+📰 新闻阅读 = select, 🚀 节点选择
+🍎 苹果服务 = select, DIRECT, 🚀 节点选择
+🌐 国外服务 = select, 🚀 节点选择, 🔯 自动选择
 🌏 国内服务 = select, DIRECT
-📱 社交平台 = select, 🌐 国外服务, 🚀 节点选择, DIRECT
-🎮 游戏平台 = select, 🌐 国外服务, 🚀 节点选择
-🎬 流媒体 = select, 🌐 国外服务, 🇭🇰 香港, 🇸🇬 新加坡, 🇯🇵 日本, 🇺🇸 美国, 🇬🇧 英国
-📺 国内流媒体 = select, 🌏 国内服务, DIRECT
-
-# ✅ 优化：自动筛选所有美国节点，不再依赖固定名称 "美国中转"
-# 这里使用 select 模式，您可以手动选一个稳定的美国节点，避免 IP 频繁变动导致 OpenAI 登出
-💻 开发平台 = select, policy-regex-filter=(美国|US|United States|Relay)
-🍎 苹果服务 = select, 🌏 国内服务, DIRECT
-📰 新闻阅读 = select, 🌐 国外服务, 🚀 节点选择
 🛑 广告拦截 = select, REJECT
+
+# --- 地区自动筛选 (关键修正：补全了这里的定义) ---
+🇭🇰 香港 = select, policy-regex-filter=(?i)(港|HK|Hong)
+🇨🇳 台湾 = select, policy-regex-filter=(?i)(台|TW|Tai)
+🇯🇵 日本 = select, policy-regex-filter=(?i)(日|JP|Japan)
+🇸🇬 新加坡 = select, policy-regex-filter=(?i)(新|SG|Sing)
+🇺🇸 美国 = select, policy-regex-filter=(?i)(美|US|State)
+🇬🇧 英国 = select, policy-regex-filter=(?i)(英|UK|Kingdom)
 
 [Rule]
 # --- 优先级最高直连区 ---
-DOMAIN-KEYWORD,hongxingyun.club,DIRECT
 DOMAIN-KEYWORD,douyinvod.com,DIRECT
 
-# --- 抖音/字节跳动直连 (必须置顶，防止被下方的广告规则误杀) ---
+# --- 抖音/字节跳动直连 ---
 DOMAIN-SUFFIX,douyin.com,DIRECT
 DOMAIN-SUFFIX,iesdouyin.com,DIRECT
 DOMAIN-SUFFIX,snssdk.com,DIRECT
 DOMAIN-SUFFIX,amemv.com,DIRECT
 DOMAIN-SUFFIX,muscdn.com,DIRECT
-# SideStore 自签防误连
 DOMAIN-SUFFIX,sidestore.io,DIRECT
 
 # --- 广告拦截 ---
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Advertising/Advertising.list,🛑 广告拦截
-# 手动广告拦截 (已安全，不会误杀抖音)
 DOMAIN-SUFFIX,umeng.com,REJECT
 DOMAIN-SUFFIX,umengcloud.com,REJECT
 DOMAIN-KEYWORD,umeng,REJECT
@@ -69,6 +78,8 @@ DOMAIN-KEYWORD,ad.byted,REJECT
 # --- 开发平台 (OpenAI / Gemini) ---
 DOMAIN-KEYWORD,openai.com,💻 开发平台
 DOMAIN-KEYWORD,chatgpt.com,💻 开发平台
+DOMAIN-KEYWORD,anthropic.com,💻 开发平台
+DOMAIN-KEYWORD,claude.ai,💻 开发平台
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Gemini/Gemini.list,💻 开发平台
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/GitHub/GitHub.list,💻 开发平台
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Google/Google.list,💻 开发平台
@@ -80,14 +91,13 @@ DOMAIN-SUFFIX,sohu.com,📺 国内流媒体
 DOMAIN-SUFFIX,youku.com,📺 国内流媒体
 DOMAIN-SUFFIX,bilibili.com,📺 国内流媒体
 DOMAIN-SUFFIX,mgtv.com,📺 国内流媒体
-DOMAIN-SUFFIX,acfun.cn,📺 国内流媒体
-DOMAIN-SUFFIX,fun.tv,📺 国内流媒体
-DOMAIN-SUFFIX,baofeng.com,📺 国内流媒体
 
 # --- 苹果服务 ---
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Apple/Apple.list,🍎 苹果服务
 
 # --- 国外流媒体 ---
+# TikTok 建议分流到日本或走通用节点，不要强制走开发平台(美国)，容易黑屏
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/TikTok/TikTok.list,🇯🇵 日本
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Netflix/Netflix.list,🎬 流媒体
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Disney/Disney.list,🎬 流媒体
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/YouTube/YouTube.list,🎬 流媒体
@@ -96,9 +106,6 @@ RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/r
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/AppleTV/AppleTV.list,🎬 流媒体
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Hulu/Hulu.list,🎬 流媒体
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Spotify/Spotify.list,🎬 流媒体
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Emby/Emby.list,🎬 流媒体
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Pandora/Pandora.list,🎬 流媒体
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/TikTok/TikTok.list,🇯🇵 日本
 
 # --- 社交平台 ---
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Telegram/Telegram.list,📱 社交平台
@@ -109,20 +116,18 @@ RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/r
 # --- 游戏平台 ---
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Game/Game.list,🎮 游戏平台
 
-# --- 其他国外服务 ---
+# --- 其他 ---
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Proxy/Proxy.list,🌐 国外服务
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Global/Global.list,🌐 国外服务
-
-# --- 国内服务与局域网 ---
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/China/China.list,🌏 国内服务
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/ChinaIPs/ChinaIPs.list,🌏 国内服务
 GEOIP,CN,🌏 国内服务
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Lan/Lan.list,DIRECT
 
 # --- 兜底 ---
-# 防止 Safari 打开 Google 搜索时跳到无法访问的 cn 域名
 FINAL,🌐 国外服务
 
 [MITM]
+ca-passphrase = 
+ca-p12 = 
 enable = true
-hostname = *.google.com, *.google.cn, *.googleapis.cn, *.googleapis.com, *.gvt1.com, *.googleadservices.com, *.google-analytics.com, *.ads.youtube.com, *.doubleclick.net, *.umeng.com, *.umengcloud.com, *.gdt.qq.com, *.ad.xiaomi.com, *.ad.sohu.com, *.ad.12306.cn, *.ad.caiyunapp.com, *.ad.huajiao.com, *.ad.kuaishou.com, *.ad.meitu.com, *.ad.iqiyi.com, *.ad.mgtv.com, *.ad.qingting.fm, *.ad.sohu.com, *.ad.tencent.com, *.ad.toutiao.com, *.ad.weibo.com, *.ad.ximalaya.com, *.ad.zhihu.com, *.ads.linkedin.com, *.ads.twitter.com, *.ads.yahoo.com, *.ads.pinterest.com, *.ads.reddit.com, *.ads.snapchat.com, *.ads.tiktok.com, *.ads.twitch.tv, *.ads.unity3d.com, *.ads.vungle.com, *.ads.yandex.ru, *.ads.mopub.com, *.ads.inmobi.com, *.ads.applovin.com, *.ads.ironSource.com, *.ads.adcolony.com, *.ads.chartboost.com, *.ads.tapjoy.com, *.ads.unityads.unity3d.com, *.ads.vungle.com
+hostname = *.ads.youtube.com,*.doubleclick.net,*.umeng.com,*.umengcloud.com,*.gdt.qq.com,*.ad.xiaomi.com,*.ad.sohu.com,*.ad.12306.cn,*.ad.caiyunapp.com,*.ad.huajiao.com,*.ad.kuaishou.com,*.ad.meitu.com,*.ad.iqiyi.com,*.ad.mgtv.com,*.ad.qingting.fm,*.ad.tencent.com,*.ad.toutiao.com,*.ad.weibo.com,*.ad.ximalaya.com,*.ad.zhihu.com,*.ads.linkedin.com,*.ads.twitter.com,*.ads.yahoo.com,*.ads.pinterest.com,*.ads.reddit.com,*.ads.snapchat.com,*.ads.tiktok.com,*.ads.twitch.tv,*.ads.unity3d.com,*.ads.vungle.com,*.ads.yandex.ru,*.ads.mopub.com,*.ads.inmobi.com,*.ads.applovin.com,*.ads.ironSource.com,*.ads.adcolony.com,*.ads.chartboost.com,*.ads.tapjoy.com,*.ads.unityads.unity3d.com
