--- a/策略组.conf
+++ b/策略组.conf
@@ -56,7 +56,7 @@ DOMAIN-SUFFIX,snssdk.com,DIRECT
 DOMAIN-SUFFIX,amemv.com,DIRECT
 DOMAIN-SUFFIX,muscdn.com,DIRECT
 DOMAIN-SUFFIX,sidestore.io,DIRECT
-
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/WeChatChina.list,DIRECT
 # --- 广告拦截 ---
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Advertising/Advertising.list,🛑 广告拦截
 DOMAIN-SUFFIX,umeng.com,REJECT
