--- a/策略组.conf
+++ b/策略组.conf
@@ -1,4 +1,4 @@
-# Shadowrocket: 2026-02-04 02:59:27
+# Shadowrocket: 2026-02-04 14:13:39
 [General]
 # --- 基础设置 ---
 ipv6 = false
@@ -24,14 +24,16 @@ update-url = https://raw.githubusercontent.com/0596cyy-cyber/Shadowrocket/refs/h
 
 [Proxy Group]
 # --- 核心策略 ---
+# 移除了 policy-select-name，让它根据测速自动选最快的节点
 🚀 节点选择 = select, 🔯 自动选择, 🇭🇰 香港, 🇨🇳 台湾, 🇯🇵 日本, 🇸🇬 新加坡, 🇺🇸 美国, 🇬🇧 英国
-🔯 自动选择 = url-test,policy-select-name=🏘️ 官网：HONGXINGDL.CLUB,interval=300,tolerance=50,url=http://www.gstatic.com/generate_204,policy-regex-filter=(?i)(HK|Hong|TW|Tai|JP|Japan|US|State|SG|Sing|KR|Korea|UK|Kingdom)
+🔯 自动选择 = url-test, policy-regex-filter=(?i)(HK|Hong|TW|Tai|JP|Japan|US|State|SG|Sing|KR|Korea|UK|Kingdom), url=http://www.gstatic.com/generate_204, interval=300, tolerance=50
 
 # --- 场景策略 ---
-# OpenAI/ChatGPT 专用 (强制美国)
-💻 开发平台 = select,policy-select-name=🇺🇸 美国直连1 - 0.5倍率,policy-regex-filter=(?i)(美国|US|United States|Relay)
+# OpenAI/ChatGPT 专用
+# 修正：去掉了具体的“0.5倍率”节点锁定，改为筛选所有美国节点，避免该特定节点下架导致断连
+💻 开发平台 = select, policy-regex-filter=(?i)(美国|US|United States|Relay)
 
-# 流媒体 (默认跟随节点选择，也可手动指定)
+# 流媒体
 🎬 流媒体 = select, 🚀 节点选择, 🇭🇰 香港, 🇸🇬 新加坡, 🇨🇳 台湾, 🇯🇵 日本, 🇺🇸 美国, 🇬🇧 英国
 📺 国内流媒体 = select, DIRECT
 
@@ -46,13 +48,14 @@ update-url = https://raw.githubusercontent.com/0596cyy-cyber/Shadowrocket/refs/h
 🌏 国内服务 = select, DIRECT
 🛑 广告拦截 = select, REJECT
 
-# --- 地区自动筛选 (关键修正：补全了这里的定义) ---
-🇭🇰 香港 = select,policy-select-name=🇭🇰 香港IEPL,policy-regex-filter=(?i)(港|HK|Hong)
-🇨🇳 台湾 = select,policy-select-name=🇨🇳 台湾IEPL-电信,policy-regex-filter=(?i)(台|TW|Tai)
-🇯🇵 日本 = select,policy-select-name=🇯🇵 日本IEPL-电信,policy-regex-filter=(?i)(日|JP|Japan)
+# --- 地区自动筛选 ---
+# 修正：移除了所有手动锁定的具体节点名称，恢复为自动抓取对应地区的所有节点
+🇭🇰 香港 = select, policy-regex-filter=(?i)(港|HK|Hong)
+🇨🇳 台湾 = select, policy-regex-filter=(?i)(台|TW|Tai)
+🇯🇵 日本 = select, policy-regex-filter=(?i)(日|JP|Japan)
 🇸🇬 新加坡 = select, policy-regex-filter=(?i)(新|SG|Sing)
-🇺🇸 美国 = select,policy-select-name=🇺🇸 美国中转,policy-regex-filter=(?i)(美|US|State)
-🇬🇧 英国 = select,policy-select-name=🇬🇧 英国-家宽,policy-regex-filter=(?i)(英|UK|Kingdom)
+🇺🇸 美国 = select, policy-regex-filter=(?i)(美|US|State)
+🇬🇧 英国 = select, policy-regex-filter=(?i)(英|UK|Kingdom)
 
 [Rule]
 # --- 优先级最高直连区 ---
