Update Shadowrocket config with new settings
Updated configuration for Shadowrocket with new timestamps and added pre-matching and extended-matching options for certain domains.

--- a/策略组.conf
+++ b/策略组.conf
@@ -1,4 +1,4 @@
-# Shadowrocket: 2026-02-10 17:37:27
+# Shadowrocket: 2026-02-14 02:11:50
 [General]
 always-real-ip = 
 tun-included-routes = 
@@ -50,12 +50,11 @@ update-url = https://raw.githubusercontent.com/0596cyy-cyber/Shadowrocket/main/%
 🇬🇧 英国 = select, policy-regex-filter=(?i)(英|UK|Kingdom)
 
 [Rule]
-DOMAIN-SUFFIX,gsa.apple.com,PROXY
 # --- 优先级最高直连区 ---
-DOMAIN-KEYWORD,douyinvod.com,DIRECT
+DOMAIN-KEYWORD,douyinvod.com,DIRECT,pre-matching,extended-matching
 
 # --- 抖音/字节跳动直连 ---
-DOMAIN-SUFFIX,douyin.com,DIRECT
+DOMAIN-SUFFIX,douyin.com,DIRECT,pre-matching,extended-matching
 DOMAIN-SUFFIX,iesdouyin.com,DIRECT
 DOMAIN-SUFFIX,snssdk.com,DIRECT
 DOMAIN-SUFFIX,amemv.com,DIRECT
@@ -143,3 +142,9 @@ RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/r
 
 # --- 兜底 ---
 FINAL,🌐 国外服务
+
+[MITM]
+enable = true
+ca-passphrase = 
+# 仅保留核心去广告和流媒体解密域名
+hostname = *.googlevideo.com, *.ads.youtube.com, *.doubleclick.net, *.byteoversea.com, *.tik-tokapi.com, *.tiktokv.com, *.ads.tiktok.com, *.openai.com, *.chatgpt.com
