Modify Shadowrocket configuration settings
Updated configuration settings for Shadowrocket, including DNS settings, proxy groups, and rule sets.

--- a/策略组.conf
+++ b/策略组.conf
@@ -1,150 +1,65 @@
-# Shadowrocket: 2026-02-14 02:11:50
+# Shadowrocket: 2026-02-19 20:44:24
 [General]
-always-real-ip = 
-tun-included-routes = 
-# --- 基础设置 ---
+always-real-ip = *.msftconnecttest.com, *.msftncsi.com, *.srv.nintendo.net, .stun.playstation.net, xbox..microsoft.com, *.xboxlive.com, *.logon.battle.net, .battle.net
 ipv6 = false
 bypass-system = true
-# 确保 17.0.0.0/8 存在，这是苹果服务的关键网段
-skip-proxy = 127.0.0.1,192.168.0.0/16,10.0.0.0/8,172.16.0.0/12,100.64.0.0/10,17.0.0.0/8,localhost,*.local,captured.apple.com
-
-# --- DNS 优化：兼顾隐私与速度 ---
-# 加入阿里 DNS 确保国内 Apple 节点秒开，保留 1.1.1.1 处理海外解析
-doh-server = https://dns.alidns.com/dns-query, https://1.1.1.1/dns-query
-
-# 备用 DNS 增加国内节点，防止 App Store 解析到美国导致无法连接
-fallback-dns-server = 223.5.5.5, 114.114.114.114, 8.8.8.8
-
-# 关键修正：开启系统 DNS 回退，当加密 DNS 抽风时自动切换
-dns-fallback-system = true
+skip-proxy = 127.0.0.1,192.168.0.0/16,10.0.0.0/8,172.16.0.0/12,100.64.0.0/10,17.0.0.0/8,localhost,.local,captured.apple.com,seed-menu.apple.com
+doh-server = https://dns.alidns.com/dns-query,https://1.1.1.1/dns-query
 prefer-doh = true
-
-# 其他优化
-force-dns-over-proxy = false
+force-dns-over-proxy = true
+dns-fallback-system = false
+fallback-dns-server = 8.8.8.8
 udp-policy-not-supported-behaviour = REJECT
-# 更新地址指向你的仓库文件
-update-url = https://raw.githubusercontent.com/0596cyy-cyber/Shadowrocket/main/%E7%AD%96%E7%95%A5%E7%BB%84.conf
 
 [Proxy Group]
-# --- 核心策略 ---
-🚀 节点选择 = select, 🔯 自动选择, 🇭🇰 香港, 🇨🇳 台湾, 🇯🇵 日本, 🇸🇬 新加坡, 🇰🇷 韩国
-🔯 自动选择 = url-test, policy-regex-filter=(?i)(HK|Hong|TW|Tai|JP|Japan|US|State|SG|Sing|KR|Korea|UK|Kingdom), url=http://www.gstatic.com/generate_204, interval=600, tolerance=50
-# --- 场景策略 ---
-💻 开发平台 = select, policy-regex-filter=(?i)(美国|US|United States|Relay)
-🎬 流媒体 = select, 🚀 节点选择, 🇭🇰 香港, 🇸🇬 新加坡, 🇰🇷 韩国 , 🇨🇳 台湾, 🇯🇵 日本, 🇺🇸 美国
+🚀 节点选择 = select, 🔯 自动选择, 🇭🇰 香港, 🇯🇵 日本, 🇸🇬 新加坡, 🇰🇷 韩国, 🇺🇸 美国
+🔯 自动选择 = url-test, policy-regex-filter=(?i)(香港|台湾|日本|新加坡|韩国|美国|英国|IEPL|中转), url=http://www.gstatic.com/generate_204, interval=600, tolerance=50
+💻 开发平台 = select,🇺🇸 美国 = select, policy-regex-filter=(?i)(美国|美|US|United States|America)
+🎬 流媒体 = select, 🚀 节点选择, 🇭🇰 香港, 🇸🇬 新加坡, 🇯🇵 日本, 🇺🇸 美国
 📺 国内流媒体 = select, DIRECT
-📱 社交平台 = select, 🚀 节点选择, 🇭🇰 香港, 🇯🇵 日本, 🇰🇷 韩国 , 🇺🇸 美国
-🎮 游戏平台 = select, 🚀 节点选择, 🇯🇵 日本, 🇰🇷 韩国 , 🇺🇸 美国
-📰 新闻阅读 = select, 🚀 节点选择
+📱 社交平台 = select, 🚀 节点选择, 🇭🇰 香港, 🇯🇵 日本, 🇸🇬 新加坡
+🎮 游戏平台 = select, DIRECT, 🚀 节点选择, 🇯🇵 日本, 🇰🇷 韩国
 🍎 苹果服务 = select, DIRECT, 🚀 节点选择
 🌐 国外服务 = select, 🚀 节点选择, 🔯 自动选择
 🌏 国内服务 = select, DIRECT
-🛑 广告拦截 = select, REJECT
-# --- 地区自动筛选 ---
-🇭🇰 香港 = select, policy-regex-filter=(?i)(港|HK|Hong)
-🇨🇳 台湾 = select, policy-regex-filter=(?i)(台|TW|Tai)
-🇯🇵 日本 = select, policy-regex-filter=(?i)(日|JP|Japan)
-🇰🇷 韩国 = select, policy-regex-filter=(?i)(韩|KR|Sing)
-🇸🇬 新加坡 = select, policy-regex-filter=(?i)(新|SG|Sing)
-🇺🇸 美国 = select, policy-regex-filter=(?i)(美|US|State)
-🇬🇧 英国 = select, policy-regex-filter=(?i)(英|UK|Kingdom)
+🛑 广告拦截 = select, REJECT, DIRECT
+🇭🇰 香港 = select, policy-regex-filter=(?i)(香港|港|HK)
+🇨🇳 台湾 = select, policy-regex-filter=(?i)(台湾|台|TW)
+🇯🇵 日本 = select, policy-regex-filter=(?i)(日本|日|JP)
+🇸🇬 新加坡 = select, policy-regex-filter=(?i)(新加坡|新|SG)
+🇰🇷 韩国 = select, policy-regex-filter=(?i)(韩国|韩|KR)
+🇺🇸 美国 = select, policy-regex-filter=(?i)(美国|美|US|United States)
 
 [Rule]
-# --- 优先级最高直连区 ---
-DOMAIN-KEYWORD,douyinvod.com,DIRECT,pre-matching,extended-matching
-
-# --- 抖音/字节跳动直连 ---
-DOMAIN-SUFFIX,douyin.com,DIRECT,pre-matching,extended-matching
+DOMAIN,geller-pa.googleapis.com,💻 开发平台
+DOMAIN-KEYWORD,googleapis,💻 开发平台
+DOMAIN-KEYWORD,openai,💻 开发平台
+DOMAIN-KEYWORD,chatgpt,💻 开发平台
+DOMAIN-KEYWORD,anthropic,💻 开发平台
+DOMAIN-KEYWORD,claude,💻 开发平台
+DOMAIN-SUFFIX,amap.com,DIRECT
+DOMAIN-SUFFIX,mi.com,DIRECT
+DOMAIN-SUFFIX,baidu.com,DIRECT
+DOMAIN-SUFFIX,xiaomi.com,DIRECT
+DOMAIN-SUFFIX,douyinvod.com,DIRECT
+DOMAIN-SUFFIX,douyin.com,DIRECT
 DOMAIN-SUFFIX,iesdouyin.com,DIRECT
 DOMAIN-SUFFIX,snssdk.com,DIRECT
 DOMAIN-SUFFIX,amemv.com,DIRECT
 DOMAIN-SUFFIX,muscdn.com,DIRECT
-# [替换] 使用你仓库的微信相关列表
 RULE-SET,https://raw.githubusercontent.com/0596cyy-cyber/Shadowrocket/main/WeChatChina.list,DIRECT
 RULE-SET,https://raw.githubusercontent.com/0596cyy-cyber/Shadowrocket/main/WeChat_Anti_Detection.list,DIRECT
-
-# --- 广告拦截 ---
-# [替换] 使用你仓库的三个广告相关列表
 RULE-SET,https://raw.githubusercontent.com/0596cyy-cyber/Shadowrocket/main/AdBlock_Custom.list,🛑 广告拦截
-RULE-SET,https://raw.githubusercontent.com/0596cyy-cyber/Shadowrocket/main/ChinaPrivacyAds.list,🛑 广告拦截
-RULE-SET,https://raw.githubusercontent.com/0596cyy-cyber/Shadowrocket/main/StatisticsBlock.list,🛑 广告拦截
-# 保留原本的详细域名规则作为补充
-DOMAIN-SUFFIX,umeng.com,REJECT
-DOMAIN-SUFFIX,umengcloud.com,REJECT
-DOMAIN-KEYWORD,umeng,REJECT
-DOMAIN-SUFFIX,talkingdata.net,REJECT
-DOMAIN-KEYWORD,talkingdata,REJECT
-DOMAIN-SUFFIX,hm.baidu.com,REJECT
-DOMAIN-SUFFIX,baidustatic.com,REJECT
-DOMAIN-KEYWORD,baiduads,REJECT
-DOMAIN-SUFFIX,mmstat.com,REJECT
-DOMAIN-SUFFIX,adashx.ut.taobao.com,REJECT
-DOMAIN-SUFFIX,pangolin-sdk-toutiao.com,REJECT
-DOMAIN-SUFFIX,bytedance.com,REJECT
-DOMAIN-SUFFIX,bytedance.net,REJECT
-DOMAIN-SUFFIX,byteoversea.com,REJECT
-DOMAIN-KEYWORD,ad.byted,REJECT
-
-# --- 开发平台 (OpenAI / Gemini) ---
-DOMAIN-KEYWORD,openai.com,💻 开发平台
-DOMAIN-KEYWORD,chatgpt.com,💻 开发平台
-DOMAIN-KEYWORD,anthropic.com,💻 开发平台
-DOMAIN-KEYWORD,claude.ai,💻 开发平台
-# [替换] 使用你仓库的 Gemini 列表
 RULE-SET,https://raw.githubusercontent.com/0596cyy-cyber/Shadowrocket/main/Gemini.list,💻 开发平台
-# [保留] GitHub 和 Google 列表（你仓库没有这两个文件，暂时保留原引用以免失效）
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/GitHub/GitHub.list,💻 开发平台
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Google/Google.list,💻 开发平台
-
-# --- 国内流媒体 ---
-# [替换] 使用你仓库的国内流媒体列表替代手动域名
-RULE-SET,https://raw.githubusercontent.com/0596cyy-cyber/Shadowrocket/main/ChinaStreaming.list,📺 国内流媒体
-
-# --- 苹果服务 ---
-# [替换] 使用你仓库的 Apple 激活/服务列表
 RULE-SET,https://raw.githubusercontent.com/0596cyy-cyber/Shadowrocket/main/Apple.list,🍎 苹果服务
-
-# [注意] 如果发现 App Store 无法连接，可能需要找回原本完整的 Apple.list，因为 Activation 列表可能不够全
-
-# --- 国外流媒体 ---
-# [保留] 你仓库暂无以下流媒体列表，保留原引用
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/TikTok/TikTok.list,🇯🇵 日本
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Netflix/Netflix.list,🎬 流媒体
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Disney/Disney.list,🎬 流媒体
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/YouTube/YouTube.list,🎬 流媒体
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/HBO/HBO.list,🎬 流媒体
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/PrimeVideo/PrimeVideo.list,🎬 流媒体
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/AppleTV/AppleTV.list,🎬 流媒体
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Hulu/Hulu.list,🎬 流媒体
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Spotify/Spotify.list,🎬 流媒体
-
-# --- 社交平台 ---
-# [保留] 你仓库暂无社交平台列表，保留原引用
-DOMAIN-SUFFIX,x.com,🇯🇵 日本
-DOMAIN-SUFFIX,twitter.com,🇯🇵 日本
-DOMAIN-SUFFIX,t.co,🇯🇵 日本
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Twitter/Twitter.list,🇯🇵 日本
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Telegram/Telegram.list,📱 社交平台
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Facebook/Facebook.list,📱 社交平台
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Instagram/Instagram.list,📱 社交平台
-
-# --- 游戏平台 ---
-# [保留] 你仓库暂无游戏列表
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Game/Game.list,🎮 游戏平台
-
-# --- 其他 ---
-# [替换] 使用你仓库的 GlobalProxy 列表
 RULE-SET,https://raw.githubusercontent.com/0596cyy-cyber/Shadowrocket/main/GlobalProxy.list,🌐 国外服务
-# [替换] 使用你仓库的 ChinaDirectSecure 列表
 RULE-SET,https://raw.githubusercontent.com/0596cyy-cyber/Shadowrocket/main/ChinaDirectSecure.list,🌏 国内服务
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/YouTube/YouTube.list,🎬 流媒体
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Telegram/Telegram.list,📱 社交平台
 GEOIP,CN,🌏 国内服务
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Lan/Lan.list,DIRECT
-
-# --- 兜底 ---
 FINAL,🌐 国外服务
 
 [MITM]
 enable = true
-ca-passphrase = 
-# 仅保留核心去广告和流媒体解密域名
-hostname = *.googlevideo.com, *.ads.youtube.com, *.doubleclick.net, *.byteoversea.com, *.tik-tokapi.com, *.tiktokv.com, *.ads.tiktok.com, *.openai.com, *.chatgpt.com
+ca-passphrase = ACFBpHgS
+hostname = *.googlevideo.com, *.ads.youtube.com, *.byteoversea.com, *.tik-tokapi.com, *.tiktokv.com, *.ads.tiktok.com
